update-manager (1:0.91.7) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - add logging for kept packages
    - make the "use-network" question on cdrom upgrades
      more clear (LP: #229508)
  
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Jul 2008 13:10:56 +0200

update-manager (1:0.91.6) intrepid; urgency=low

  * Make "--mode={server,desktop}" obsolete by adding automatic
    detection for this. This eliminates the bugreports where
    people run the text do-release-upgrade client that defaults
    to server mode
  * UpdateManager/UpdateManager.py:
    - improve the changelog version number scanner
    - if no information is available yet, display a launchpad link
      for interested people (not fetching from there automatically to
      not hammer LP too much)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Jun 2008 17:33:30 +0200

update-manager (1:0.91.5) intrepid; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - support "old-releases.ubuntu.com" as a valid mirror and
      auto transition from that to the regular archive 
      (LP: #235527)
    - add extra paraonoia when adding a missing admin group
      (thanks to LaMont Jones) LP: #241723
  * UpdateManager/ChangelogViewer.py:
    - support "exo-open" (xfce) too (LP: #240473)
  * DistUpgrade/mirrors.cfg:
    - remove ftp.caliu.info (LP: #231966)
  * DistUpgrade/DistUpgradeController.py:
    - fix typo and unfuzzy translations (LP: #220505)
  * UpdateManager/UpdateManager.py, data/update-manager.schemas.in:
    - provide a gconf key /apps/update-manager/autoclose_install_window
      to make it possible to prevent automatic closing of the installation
      window (LP: #183209)
  * DistUpgrade/DistUpgrade.cfg.dapper:
    - remove ports.ubuntu.com from powerpc, it is not available on
      ports.ubuntu.com but on archive.ubuntu.com (LP: #241729)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 20 Jun 2008 20:02:50 +0200
