@@ -4,7 +4,8 @@ update-manager (1:0.91.7) UNRELEASED; urgency=low
     - add logging for kept packages
     - make the "use-network" question on cdrom upgrades
       more clear (LP: #229508)
-  
+  * DistUpgrade/DistUpgradeApport.py:
+    - only run apport-{gtk,qt} if DISPLAY is set
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Jul 2008 13:10:56 +0200
 
